# Simulation-Gazebo-for-TUBITAK-2204A

./: LICENSE
skyshard/skyshard_core/: CMakeLists.txt  package.xml
skyshard/skyshard_core/include/skyshard_core/: Dijkstra.hpp  Graph.hpp  Prophet.hpp
skyshard/skyshard_core/src/: router_node.cpp  scenario_manager.cpp
skyshard/skyshard_msgs/: CMakeLists.txt  package.xml
skyshard/skyshard_msgs/msg/: DroneState.msg
skyshard/skyshard_msgs/srv/: UpdateGraph.srv
skyshard/skyshard_simulation/: package.xml  setup.py
skyshard/skyshard_simulation/launch/: skyshard_sim.launch.py
skyshard/skyshard_simulation/models/city_world/: city_world.sdf
skyshard/skyshard_simulation/models/drone_model/: model.sdf
skyshard/skyshard_simulation/scripts/: marker_publisher.py  spawn_manager.py
